rnsc/tests/snapshots/error-parser-outer_class_sub_directive-missing_operand_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that parser continues after missing operand and reports subsequent errors
; Expected errors: E-020 (missing operand), E-037 (unexpected token)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .outer_class

    unknown_token ; <- E-037
.inner_classes_attr_end

.class_end
----- STDERR -----
[E-020] Error: missing class name after '.outer_class'
   ╭─[ test_data/rns_integration/error/parser/outer_class_sub_directive/missing_operand_recovers.rns:8:5 ]
   │
 8 │     .outer_class
   │     ──────┬─────│ 
   │           ╰─────── the '.outer_class' directive requires a outer class reference as operand
   │                 │ 
   │                 ╰─ but class name is missing
   │ 
   │ Help: Provide a outer class reference after the '.outer_class' directive, e.g.:
   │       .outer_class <class_name>
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
[E-037] Error: unexpected identifier inner_classes_attr body
    ╭─[ test_data/rns_integration/error/parser/outer_class_sub_directive/missing_operand_recovers.rns:10:5 ]
    │
 10 │     unknown_token ; <- E-037
    │     ──────┬──────  
    │           ╰──────── unexpected token
    │ 
    │ Help: Check the syntax of the inner_classes_attr body and ensure all tokens are valid.
    │ 
    │ Note: For more details see:
    │       https://rune.lagertha-vm.com/errors/E-037
────╯
----- JAVAP -----
not generated
