rnsc/tests/snapshots/error-parser-outer_class_sub_directive-multiple_definitions_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that parser continues after multiple definitions and reports subsequent errors
; Expected errors: E-043 (multiple definitions), E-037 (unexpected token)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .outer_class com/profs/Main
    .outer_class com/profs/Other

    unknown_token ; <- E-037
.inner_classes_attr_end

.class_end
----- STDERR -----
[E-037] Error: unexpected identifier inner_classes_attr body
    ╭─[ test_data/rns_integration/error/parser/outer_class_sub_directive/multiple_definitions_recovers.rns:11:5 ]
    │
 11 │     unknown_token ; <- E-037
    │     ──────┬──────  
    │           ╰──────── unexpected token
    │ 
    │ Help: Check the syntax of the inner_classes_attr body and ensure all tokens are valid.
    │ 
    │ Note: For more details see:
    │       https://rune.lagertha-vm.com/errors/E-037
────╯
[E-043] Error: multiple .outer_class directives in inner_classes_attr
   ╭─[ test_data/rns_integration/error/parser/outer_class_sub_directive/multiple_definitions_recovers.rns:9:5 ]
   │
 8 │     .outer_class com/profs/Main
   │     ──────┬─────  
   │           ╰─────── first .outer_class directive defined here with class 'com/profs/Main'
 9 │     .outer_class com/profs/Other
   │     ──────┬─────  
   │           ╰─────── but another .outer_class directive defined here with class 'com/profs/Other'
   │ 
   │ Help: An inner_classes_attr block can only have one .outer_class directive. Remove the duplicates.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-043
───╯
----- JAVAP -----
not generated
