rnsc/tests/snapshots/error-parser-outside_class_directive-after_class_dir-dot_annotation.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public EmptyClass
.super java/lang/Object

.class_end
.annotation actually can't be here
----- STDERR -----
[E-008] Error: unexpected directive after class definition
   ╭─[ test_data/rns_integration/error/parser/outside_class_directive/after_class_dir/dot_annotation.rns:5:1 ]
   │
 5 │ .annotation actually can't be here
   │ ─────┬─────  
   │      ╰─────── valid contexts for .annotation directive are: 'class body', 'method body'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- JAVAP -----
not generated
